src/tests/snapshots/niri__tests__window_opening__check_target_output_and_row@ws1-out2-fsF-wfsAU-spB2.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nset parent: B2\nconfig:\noutput \"headless-2\" {\n    layout {\n        border {\n            on\n        }\n    }\n}\n\n// TEAM_055: Renamed from workspace to row\nrow \"ws-1\" {\n    open-on-output \"headless-1\"\n}\n\nrow \"ws-2\" {\n    open-on-output \"headless-2\"\n\n    layout {\n        border {\n            width 10\n        }\n\n        default-column-width {\n            fixed 500\n        }\n    }\n}\n\nwindow-rule {\n    exclude title=\"parent\"\n\n    open-on-row \"ws-1\"\n    open-on-output \"headless-2\"\n    open-fullscreen false\n}\n\nwindow-rule {\n    match title=\"parent\"\n    open-on-output \"headless-2\"\n}"
expression: snapshot
---
final monitor: headless-1
final row: -1 (ws-1)

initial configure:
size: 0 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 0 × 688, bounds: 1248 × 688, states: []
size: 616 × 688, bounds: 1248 × 688, states: [Activated]
